Fix | Fullscreen Overflow

--- a/mot/src/canvas.css
+++ b/mot/src/canvas.css
@@ -6,10 +6,15 @@
 .-frameless {
   margin: 0 !important;
   padding: 0 !important;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 .form {
   display: grid;
+}
+
+.container {
+  width: 100vw !important;
+  height: 100vh !important;
 }
